# translation-metrics

./: .gitignore  FINDINGS.md  README.md  main.py  paper.md  pyproject.toml
archive/semantic_similarity/: semantic_similarity.py  semantic_similarity_openai.py  semantic_similarity_openai_results.json  semantic_similarity_results_labse.json
data/17099743/: Animal-Farm_preface.tmx  Animal_farm.json  Animal_farm.tmx  Animal_farm_UK_1947_Ivan_Cherniatynskyi_Kolhosp_tvaryn.txt  Animal_farm_UK_1984_Iryna_Dybko_Khutir_tvaryn.txt  Animal_farm_UK_1991_Oleksii_Drozdovskyi_Skotoferma.txt  Animal_farm_UK_1991_Yurii_Shevchuk_Ferma_rai_dlia_tvaryn.txt  Animal_farm_UK_1992_Natalia_Okolitenko_Skotokhutir.txt  Animal_farm_UK_2020_Bohdana_Nosenok_Kolhosp_tvaryn.txt  Animal_farm_UK_2021_Viacheslav_Stelmakh_Kolhosp_tvaryn.txt  Animal_farm_combine.tmx  Animal_farm_combine.txt  Animal_farm_separate.txt
data/materials/: qe_report.md
human_eval/: arena_task.__all__.incomplete (1).jsonl  arena_task.__all__.incomplete.jsonl  arena_task.__all__.incomplete_2.jsonl  system_key.json
results/: lapa_model_metricx_23_qe.jsonl  lapa_model_metricx_24_qe.jsonl  semantic_similarity_results_labse_full.json
scripts/: prepare_xcomet.sh  run_metricx_evaluate.sh  run_metricx_predict.sh
src/: analyze_metricx_roundrobin.py  analyze_tmx_segments.py  comet_evaluate.py  config.py  custom_translations_loader.py  evaluator.py  labse_evaluate.py  llm_judge.py  llm_judge_literary.py  main.py  metricx_converter.py  metricx_evaluate.py  neural_metrics_analysis.py  tmx_parser.py  trueskill_rank.py  visualizer.py
(+137 files in other folders)
